--- a/style.css
+++ b/style.css
@@ -1,22 +1,69 @@
-body
-{
-  background-color: #f4f4f4;
-  color: #555555;
-  font-family: arial,monospace,sans-serif;
-  font-size: 12px;
-  font-weight: normal;
-  /*same as above
-  font: normal 12px arial, helvetica, sans-serif;*/
-  line-height: 1.6em;
-  margin:0;
-}
-.container
-{
-  width:80% ;
-  margin: auto;
-}
-.box-1
-{
-  background-color: #333;
-  color: #fff;
+*{
+  margin:0px;
+  padding:0px;
+  }
+  #container{
+      position:fixed;
+	  top:0;
+	  left:o;
+      height:50px;
+	  width:100%;
+  }
+  #container ul{
+      list-style:none;
+  }
+  #container ul li{
+      background-color:rgb(78,78,78);
+	  width:150px;
+	  border:1px solid purple;
+	  height:50px;
+	  line-height:50px;
+	  text-align:center;
+	  float:left;
+	  color:white;
+	  font-size:18px;
+	  opacity:0.6;
+	  font-weight:bold;
+  }
+#container ul li:hover{
+  background-color:black;
+  }
+  #container ul ul{
+	  display:none;
+  }
+  #container ul li:hover > ul{
+	  display:block;
+  }
+  body, html{
+	  height:100%;
+	  margin:0;
+/*background-color:rgb(52,33,84);*/	  
+  }
+  #copyright{
+	  position:fixed;
+	  left:0;
+	  bottom:0;
+	  width:100%;
+   background-color:rgb(68,68,136);
+   text-align:center;
+   font-size:13px;
+   opacity:0.4;
+   color:white;
+   font-weight:bold;
+    }
+  #bg {
+  background-image: url("pics/5.jpg");
+  height: 100%; 
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  }
+  #container pre{
+      color:white;
+	  font-family:forte;
+	  font-size:50px;
+  }
+a{
+   color:white;
+   text-decoration:none;
 }
